--- a/1BM22CS047_MANHATTAN_DISTANCE.ipynb
+++ b/1BM22CS047_MANHATTAN_DISTANCE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtdB1YReDoThzwMi9sHuNj",
+      "authorship_tag": "ABX9TyO5fyUL1p/Qio/blvnFkkHu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LIIdOILCZPEf",
-        "outputId": "03721671-6b7f-4e75-9849-a90878b46a6e"
+        "outputId": "e79c5d89-cb68-447a-ac18-bbb52d0a5c28"
       },
       "outputs": [
         {
@@ -42,65 +42,33 @@
           "name": "stdout",
           "text": [
             "Solution Found:\n",
-            "[1, 2, 3]\n",
-            "[4, 0, 5]\n",
-            "[6, 7, 8]\n",
+            "[2, 8, 3]\n",
+            "[1, 6, 4]\n",
+            "[0, 7, 5]\n",
             "\n",
-            "[1, 2, 3]\n",
-            "[0, 4, 5]\n",
-            "[6, 7, 8]\n",
+            "[2, 8, 3]\n",
+            "[1, 6, 4]\n",
+            "[7, 0, 5]\n",
             "\n",
-            "[0, 2, 3]\n",
-            "[1, 4, 5]\n",
-            "[6, 7, 8]\n",
+            "[2, 8, 3]\n",
+            "[1, 0, 4]\n",
+            "[7, 6, 5]\n",
             "\n",
             "[2, 0, 3]\n",
-            "[1, 4, 5]\n",
-            "[6, 7, 8]\n",
+            "[1, 8, 4]\n",
+            "[7, 6, 5]\n",
             "\n",
-            "[2, 3, 0]\n",
-            "[1, 4, 5]\n",
-            "[6, 7, 8]\n",
+            "[0, 2, 3]\n",
+            "[1, 8, 4]\n",
+            "[7, 6, 5]\n",
             "\n",
-            "[2, 3, 5]\n",
-            "[1, 4, 0]\n",
-            "[6, 7, 8]\n",
+            "[1, 2, 3]\n",
+            "[0, 8, 4]\n",
+            "[7, 6, 5]\n",
             "\n",
-            "[2, 3, 5]\n",
-            "[1, 0, 4]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[2, 0, 5]\n",
-            "[1, 3, 4]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[0, 2, 5]\n",
-            "[1, 3, 4]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[1, 2, 5]\n",
-            "[0, 3, 4]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[1, 2, 5]\n",
-            "[3, 0, 4]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[1, 2, 5]\n",
-            "[3, 4, 0]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[1, 2, 0]\n",
-            "[3, 4, 5]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[1, 0, 2]\n",
-            "[3, 4, 5]\n",
-            "[6, 7, 8]\n",
-            "\n",
-            "[0, 1, 2]\n",
-            "[3, 4, 5]\n",
-            "[6, 7, 8]\n",
+            "[1, 2, 3]\n",
+            "[8, 0, 4]\n",
+            "[7, 6, 5]\n",
             "\n"
           ]
         },
@@ -108,11 +76,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "14"
+              "6"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -175,8 +143,8 @@
         "\n",
         "    return -1\n",
         "\n",
-        "start = [[1, 2, 3], [4, 0, 5], [6, 7, 8]]\n",
-        "goal = [[0,1, 2], [3,4, 5], [6,7,8]]\n",
+        "start = [[2,8,3], [1,6,4], [0,7,5]]\n",
+        "goal = [[1,2,3], [8,0,4], [7,6,5]]\n",
         "astar_manhattan(start, goal)\n"
       ]
     }
