--- a/1BM22CS047_Forward_Reasoning.ipynb
+++ b/1BM22CS047_Forward_Reasoning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2x8e6DnPjm1R32Rp9NPLG",
+      "authorship_tag": "ABX9TyNrIr0taXz8ha68ycT3pZdb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,116 +28,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Om5Q54X_ZuQ8",
-        "outputId": "96310b1a-a385-495f-b702-1b0b045259be"
+        "outputId": "67aa61b7-e4ba-41c7-8285-a3d2d2aedf8e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Applied rule: ['Missile(T1)'] -> ['Weapon(T1)']\n",
-            "New facts: {'Weapon(T1)'}\n",
-            "Updated facts: {'American(Robert)', 'Weapon(T1)', 'Enemy(A, America)', 'Missile(T1)', 'Owns(A, T1)'}\n",
-            "Applied rule: ['Enemy(A, America)'] -> ['Hostile(A)']\n",
-            "New facts: {'Hostile(A)'}\n",
-            "Updated facts: {'American(Robert)', 'Weapon(T1)', 'Enemy(A, America)', 'Hostile(A)', 'Missile(T1)', 'Owns(A, T1)'}\n",
-            "\n",
-            "Robert is not a criminal.\n"
+            "Applying rule: ['Robert is American', 'Nono is enemy of America', 'Missile is a weapon', 'Robert sold missiles to Nono'] => Robert is criminal\n",
+            "Current facts: {'Robert sold missiles to Nono', 'Robert is criminal', 'Nono is enemy of America', 'Nono has some missiles', 'Robert is American', 'Missile is a weapon'}\n",
+            "No new facts can be derived.\n",
+            "Current facts: {'Robert sold missiles to Nono', 'Robert is criminal', 'Nono is enemy of America', 'Nono has some missiles', 'Robert is American', 'Missile is a weapon'}\n",
+            "Goal reached: Robert is a criminal.\n"
           ]
         }
       ],
       "source": [
-        "class ForwardReasoning:\n",
+        "class Rule:\n",
+        "    def __init__(self, conditions, conclusion):\n",
+        "        self.conditions = conditions  # List of conditions (facts needed)\n",
+        "        self.conclusion = conclusion  # Conclusion (new fact derived)\n",
+        "\n",
+        "    def is_applicable(self, facts):\n",
+        "        # Check if all conditions are met (i.e., fact exists in the set of facts)\n",
+        "        return all(condition in facts for condition in self.conditions)\n",
+        "\n",
+        "\n",
+        "class ForwardChaining:\n",
         "    def __init__(self, facts, rules):\n",
-        "        \"\"\"\n",
-        "        Initialize the forward reasoning system with facts and rules.\n",
-        "        :param facts: List of known facts (strings).\n",
-        "        :param rules: List of rules in the format (condition, conclusion).\n",
-        "                      Condition and conclusion are both lists of facts.\n",
-        "        \"\"\"\n",
-        "        self.facts = set(facts)  # Facts known initially\n",
-        "        self.rules = rules  # Rules to apply\n",
+        "        self.facts = set(facts)  # Initialize facts (known information)\n",
+        "        self.rules = rules  # Initialize the rules (conditions -> conclusion)\n",
         "\n",
         "    def apply_rule(self, rule):\n",
-        "        \"\"\"\n",
-        "        Apply a single rule if its condition is met.\n",
-        "        :param rule: A tuple where the first element is a list of conditions and the second is the conclusion.\n",
-        "        :return: True if the rule was applied (new facts were added), False otherwise.\n",
-        "        \"\"\"\n",
-        "        condition, conclusion = rule\n",
+        "        # Check if a rule can be applied and add the conclusion to facts\n",
+        "        if rule.is_applicable(self.facts):\n",
+        "            print(f\"Applying rule: {rule.conditions} => {rule.conclusion}\")\n",
+        "            self.facts.add(rule.conclusion)\n",
         "\n",
-        "        # Check if the rule's conditions are all in the known facts\n",
-        "        if all(c in self.facts for c in condition):\n",
-        "            # If condition is met, add the conclusion facts to the known facts\n",
-        "            new_facts = set(conclusion) - self.facts  # Only add new facts\n",
-        "            if new_facts:\n",
-        "                self.facts.update(new_facts)\n",
-        "                print(f\"Applied rule: {condition} -> {conclusion}\")\n",
-        "                print(f\"New facts: {new_facts}\")\n",
-        "                print(f\"Updated facts: {self.facts}\")\n",
-        "                return True\n",
-        "        return False\n",
-        "\n",
-        "    def forward_chain(self):\n",
-        "        \"\"\"\n",
-        "        Perform forward chaining until no new facts can be derived.\n",
-        "        \"\"\"\n",
-        "        applied = True\n",
-        "        while applied:\n",
-        "            applied = False\n",
-        "            # Try to apply each rule\n",
+        "    def run(self):\n",
+        "        # Repeatedly apply rules as long as new facts are added\n",
+        "        new_fact = True\n",
+        "        while new_fact:\n",
+        "            new_fact = False\n",
         "            for rule in self.rules:\n",
-        "                if self.apply_rule(rule):\n",
-        "                    applied = True\n",
+        "                if rule.is_applicable(self.facts) and rule.conclusion not in self.facts:\n",
+        "                    self.apply_rule(rule)\n",
+        "                    new_fact = True\n",
+        "            if not new_fact:\n",
+        "                print(\"No new facts can be derived.\")\n",
+        "            print(\"Current facts:\", self.facts)\n",
         "\n",
-        "    def get_facts(self):\n",
-        "        \"\"\"Return the current set of facts.\"\"\"\n",
-        "        return self.facts\n",
         "\n",
-        "\n",
-        "# Given Facts\n",
-        "facts = [\n",
-        "    \"Owns(A, T1)\",  # Country A owns missile T1\n",
-        "    \"Missile(T1)\",  # T1 is a missile\n",
-        "    \"Enemy(A, America)\",  # A is an enemy of America\n",
-        "    \"American(Robert)\",  # Robert is American\n",
+        "# Define facts\n",
+        "initial_facts = [\n",
+        "    \"Robert is American\",         # Robert is American\n",
+        "    \"Nono is enemy of America\",    # Nono is an enemy of America\n",
+        "    \"Missile is a weapon\",        # A missile is a weapon\n",
+        "    \"Robert sold missiles to Nono\",  # Robert sold missiles to Nono\n",
+        "    \"Nono has some missiles\",      # Nono has missiles\n",
         "]\n",
         "\n",
-        "# Rules based on the problem\n",
+        "# Define rules (if conditions are met, then conclude the new fact)\n",
         "rules = [\n",
-        "    # Rule (5): If a missile, then it's a weapon\n",
-        "    ([\"Missile(T1)\"], [\"Weapon(T1)\"]),  # T1 is a weapon\n",
-        "\n",
-        "    # Rule (6): If an enemy of America, then hostile\n",
-        "    ([\"Enemy(A, America)\"], [\"Hostile(A)\"]),  # A is hostile\n",
-        "\n",
-        "    # Rule (4): If country A owns missile p and p is a missile, then Robert sells it to A\n",
-        "    ([\"Missile(p)\", \"Owns(A, p)\"], [\"Sells(Robert, p, A)\"]),  # Robert sells to A\n",
-        "\n",
-        "    # Rule (1): If p is American, p sells weapon q to a hostile r, then p is criminal\n",
-        "    ([\"American(p)\", \"Weapon(q)\", \"Sells(p, q, r)\", \"Hostile(r)\"], [\"Criminal(p)\"]),  # Robert is criminal\n",
+        "    Rule([\"Robert is American\", \"Nono is enemy of America\", \"Missile is a weapon\", \"Robert sold missiles to Nono\"], \"Robert is criminal\"),\n",
         "]\n",
         "\n",
-        "# Initialize the forward reasoning system\n",
-        "reasoner = ForwardReasoning(facts, rules)\n",
+        "# Create the forward chaining engine\n",
+        "engine = ForwardChaining(initial_facts, rules)\n",
         "\n",
-        "# Perform forward chaining and print the steps\n",
-        "reasoner.forward_chain()\n",
+        "# Run the forward chaining algorithm\n",
+        "engine.run()\n",
         "\n",
-        "# Get the final set of facts\n",
-        "final_facts = reasoner.get_facts()\n",
-        "\n",
-        "# Check if the final facts contain Criminal(Robert)\n",
-        "if \"Criminal(Robert)\" in final_facts:\n",
-        "    print(\"\\nRobert is a criminal.\")\n",
+        "# Check if the goal is achieved\n",
+        "if \"Robert is criminal\" in engine.facts:\n",
+        "    print(\"Goal reached: Robert is a criminal.\")\n",
         "else:\n",
-        "    print(\"\\nRobert is not a criminal.\")\n"
+        "    print(\"Goal not reached.\")"
       ]
     }
   ]
